--- a/app_cart/templates/order.html
+++ b/app_cart/templates/order.html
@@ -16,7 +16,7 @@
                                             <div class="invoice-title">
                                                 <div class="row">
                                                     <div class="col-md-12 text-center">
-                                                        <h4> NYC Construction Safety Training</h4>
+                                                        <h4> Construction Safety Training</h4>
                                                     </div>
                                                 </div>
                                                 <br>
@@ -31,7 +31,7 @@
                                                 <div class="col-md-6">
                                                     <address>
                                                     <strong>Invoiced From</strong><br>
-                                                    NYC Construction Safety Training, LLC.<br>
+                                                    Construction Safety Training, LLC.<br>
                                                     mail@pdhsafety.com<br>
                                                     <abbr title="Phone">P:</abbr> 914-473-6791
                                                 </address>
