--- a/app_public/templates/about/about.html
+++ b/app_public/templates/about/about.html
@@ -37,19 +37,19 @@
                                 Mission Statement
                             </h3>
                             <p>
-                                NYC Construction Safety Training School aims to offer quality training that is relevant and useful for the construction industry and other labor industries. These efforts include offering training courses that are useful and/or necessary to achieve success
+                                Construction Safety Training School aims to offer quality training that is relevant and useful for the construction industry and other labor industries. These efforts include offering training courses that are useful and/or necessary to achieve success
                                                             and career outcomes in the construction workforce and other industries where course material may be useful and applicable, annual reviews of training materials for accuracy and relevance, and development of quality staff and
                                                             instructors.
                             </p>
                             <p>
-                                <strong>NYC Construction Safety Training Mission Statement</strong>
+                                <strong>Construction Safety Training Mission Statement</strong>
                             </p>
                             <p>
                                 NYC Construction Training, LLC is an educational organization dedicated to supporting construction safety management education and career advancement through delivery of quality training that is useful and relevant for today’s construction industries.
                             </p>
                             <p>
                                 <strong>
-                                    NYC Construction Safety Training Vision
+                                    Construction Safety Training Vision
                                 </strong>
                             </p>
                             <p>
@@ -58,7 +58,7 @@
                             </p>
                             <p>
                                 <strong>
-                                    NYC Construction Safety Training Values
+                                    Construction Safety Training Values
                                 </strong>
                             </p>
                             <p>
