--- a/app_public/templates/faq/faq.html
+++ b/app_public/templates/faq/faq.html
@@ -133,7 +133,7 @@
                                     </strong>
                                 </div>
                                 <div class="card-body">
-                                    You can register for Occupational Safety and Health Administration, OSHA 10 here at NYC Construction Safety Training, LLC. To view our OSHA 10 course, please
+                                    You can register for Occupational Safety and Health Administration, OSHA 10 here at Construction Safety Training, LLC. To view our OSHA 10 course, please
                                     <a href="{% url 'student_registration' %}">
                                         <strong>click here</strong>
                                     </a>.
@@ -147,7 +147,7 @@
                                     </strong>
                                 </div>
                                 <div class="card-body">
-                                    You can register for Occupational Safety and Health Administration, OSHA 30 here at NYC Construction Safety Training, LLC. To view our OSHA 30 course, please
+                                    You can register for Occupational Safety and Health Administration, OSHA 30 here at Construction Safety Training, LLC. To view our OSHA 30 course, please
                                     <a href="{% url 'student_registration' %}">
                                         <strong>click here</strong>
                                     </a>.
