--- a/app_public/templates/legal/legal.html
+++ b/app_public/templates/legal/legal.html
@@ -42,7 +42,7 @@
                                     </div>
                                     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                                         <div class="card-body">
-                                            This agreement binds you (student, user, or participant) or the company you represent to the terms and conditions set forth herein in connection with your use of NYC Construction Safety Training (NYCCST) software, services, or other offerings. By using
+                                            This agreement binds you (student, user, or participant) or the company you represent to the terms and conditions set forth herein in connection with your use of Construction Safety Training (NYCCST) software, services, or other offerings. By using
                                                                                     any of the NYCCST products or by enrolling or registering with NYCCST (either via web or other forms of enrollment) you agree to become bond by the terms and conditions listed on this website and on the NYCCST Student
                                                                                     Manual. All prospective students are to review the terms and conditions listed on the NYCCST website as well as the NYCCST Student Manual prior to enrollment. If you do not agree to the terms and conditions do not
                                                                                     register or use NYCCST services/products.
@@ -86,7 +86,7 @@
                                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                         <div class="card-body">
                                             <p>
-                                                NYC Construction Safety Training, LLC does not tolerate discrimination, nor tolerate explicit references of a discriminatory nature, based on gender, gender identity, gender expression, race, national origin, color, religion, age, disability, veteran
+                                                Construction Safety Training, LLC does not tolerate discrimination, nor tolerate explicit references of a discriminatory nature, based on gender, gender identity, gender expression, race, national origin, color, religion, age, disability, veteran
                                                                                             status, socioeconomic status, marital status, pregnancy, and/or sexual orientation.
                                             </p>
                                         </div>
@@ -118,7 +118,7 @@
                                     </div>
                                     <div id="collapse5" class="collapse" aria-labelledby="heading5" data-parent="#accordionExample">
                                         <div class="card-body">
-                                            You understand that by using any f the features of the NYC Construction Safety Training (NYCCST) websites and services, you act at your own risk, and represent and warrant that (a) you are the enrolled "Student," "User," or "Participant" who is authorized
+                                            You understand that by using any f the features of the Construction Safety Training (NYCCST) websites and services, you act at your own risk, and represent and warrant that (a) you are the enrolled "Student," "User," or "Participant" who is authorized
                                                                                     to take the applicable course/exam and (b) the certification and/or identification you have provided is completely accurate and you fully understand that any falsification will be a violation of these terms of use
                                                                                     and may be reported to the appropriate authority or test sanctioning organization. You agree that you will be held accountable for any and all infractions associated with identity misrepresentation and agree to
                                                                                     participate in the in the disciplinary process enforced by NYCCST and/or other relevant authority or test sanctioning organization. You also certify that you are not accepting or utilizing external help to complete
