--- a/app_students/templates/registration/_mail_signup_confirm.html
+++ b/app_students/templates/registration/_mail_signup_confirm.html
@@ -94,7 +94,7 @@
                                                         Hi {{first_name}} {{last_name}}
                                                     </h5>
                                                     <p style="font-size:14px;">
-                                                        Welcome to NYC Construction Safety Training, LLC! You have successfully created a new account. Your username is {{username}}.
+                                                        Welcome to Construction Safety Training, LLC! You have successfully created a new account. Your username is {{username}}.
                                                 </td>
                                             </tr>
 
@@ -106,7 +106,7 @@
                                                         Please get in touch if you have any questions.
                                                     </p>
                                                     <p style="text-align:left;padding-left:40px;margin-top:40px;">
-                                                        Thanks, <br> The NYC Construction Safety Training, LLC Team
+                                                        Thanks, <br> The Construction Safety Training, LLC Team
                                                     </p>
                                                 </td>
                                             </tr>
