--- a/app_teachers/templates/teacher_base.html
+++ b/app_teachers/templates/teacher_base.html
@@ -117,7 +117,7 @@
                         <div class="widget footer-widget mb-5 mb-lg-0">
                             <h5 class="widget-title">About Us</h5>
                             <p class="mt-3">
-                                NYC Construction Safety Training School aims to offer quality training that is relevant and useful for the construction industry and other labor industries. These efforts include offering training courses that are useful and/or necessary to achieve success
+                                Construction Safety Training School aims to offer quality training that is relevant and useful for the construction industry and other labor industries. These efforts include offering training courses that are useful and/or necessary to achieve success
                                                                                             and career outcomes in the construction workforce and other industries where course material may be useful and applicable, annual reviews of training materials for accuracy and relevance, and development of quality staff and
                                                                                             instructors..
                             </p>
@@ -223,7 +223,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="copyright text-lg-center">
-                                <p>Copyright © 2021 All rights reserved | NYC Construction Safety Training, LLC</p>
+                                <p>Copyright © 2021 All rights reserved | Construction Safety Training, LLC</p>
                             </div>
                         </div>
                     </div>
