--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -136,7 +136,7 @@
                 <nav class="navbar navbar-expand-lg">
                     <div class="container">
                         <a class="navbar-brand" href="/">
-                            <img src="{% static 'edutim/images/logo-dark.png' %}" alt="Edutim" class="img-fluid">
+                            <img src="{% static 'edutim/images/logo5.png' %}" width="100" alt="Edutim" class="img-fluid">
                         </a>
 
                         <!-- Toggler -->
@@ -256,7 +256,7 @@
                         <div class="widget footer-widget mb-5 mb-lg-0">
                             <h5 class="widget-title">About Us</h5>
                             <p class="mt-3">
-                                NYC Construction Safety Training aims to offer quality training that is relevant and useful for the construction industry. These efforts include offering training courses that are useful and/or necessary to achieve success and career outcomes in the construction industry where course material may be useful and applicable, annual reviews of training materials for accuracy and relevance, and development of quality staff and instructors.                                                                                                                                                                                                                         instructors..
+                                Construction Safety Training aims to offer quality training that is relevant and useful for the construction industry. These efforts include offering training courses that are useful and/or necessary to achieve success and career outcomes in the construction industry where course material may be useful and applicable, annual reviews of training materials for accuracy and relevance, and development of quality staff and instructors.                                                                                                                                                                                                                         instructors..
                             </p>
                             <ul class="list-inline footer-socials">
                                 <li class="list-inline-item">
@@ -360,7 +360,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="copyright text-lg-center">
-                                <p>Copyright © 2021 All rights reserved | NYC Construction Safety Training, LLC</p>
+                                <p>Copyright © 2021 All rights reserved | Construction Safety Training, LLC</p>
                             </div>
                         </div>
                     </div>
