--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -9,7 +9,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-8">
                     <div class="banner-content center-heading">
-                        <h1>Online Training & Certification</h1>
+                        <h1>Online Safety Training & Certification</h1>
                         <a href="{% url 'courses_list' %}" class="btn btn-main">
                             <i class="fa fa-list-ul mr-2"></i>our Courses
                         </a>
@@ -28,8 +28,8 @@
             <div class="row align-items-center">
                 <div class="col-lg-12 col-md-12">
                     <div class="section-heading center-heading">
-                        <span class="subheading">Learn new skills to go ahead for your career</span>
-                        <h3>Online Training & Certification</h3>
+                        <span class="subheading">LEARN NEW SAFETY SKILLS TO GO AHEAD FOR YOUR CAREER</span>
+                        <h3>Online Safety Training & Certification</h3>
                     </div>
                 </div>
             </div>
