--- a/app_teachers/templates/teacher_base.html
+++ b/app_teachers/templates/teacher_base.html
@@ -52,7 +52,7 @@
                 <nav class="navbar navbar-expand-lg">
                     <div class="container">
                         <a class="navbar-brand" href="/">
-                            <img src="{% static 'edutim/images/logo-dark.png' %}" alt="Edutim" class="img-fluid">
+                            <img src="{% static 'edutim/images/logo5.png' %}" width="55" alt="Construction Safety Training" class="img-fluid">
                         </a>
 
                         <!-- Toggler -->
