--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -136,7 +136,7 @@
                 <nav class="navbar navbar-expand-lg">
                     <div class="container">
                         <a class="navbar-brand" href="/">
-                            <img src="{% static 'edutim/images/logo5.png' %}" width="100" alt="Edutim" class="img-fluid">
+                            <img src="{% static 'edutim/images/logo5.png' %}" width="100" alt="Construction Safety Training" class="img-fluid">
                         </a>
 
                         <!-- Toggler -->
