--- a/app_public/templates/packages/packages.html
+++ b/app_public/templates/packages/packages.html
@@ -54,7 +54,7 @@
                     <div class="card-body">
                         <h3 class="text-center">Courses</h3>
                         <div class="text-center mb-2">
-                            <ul class="list-unstyled">
+                            <ul class="list-unstyled" style="max-height: 150px;overflow: hidden auto;">
                                 {{#each courses}}
                                     <li>{{ course.title }}</li>
                                 {{/each}}
