--- a/app_cart/templates/package_cart.html
+++ b/app_cart/templates/package_cart.html
@@ -43,7 +43,7 @@
                                 <div class="woocommerce">
                                     <div class="woocommerce-notices-wrapper"></div>
                                     <form class="woocommerce-cart-form" action="" method="">
-                                        <table class="shop_table shop_table_responsive cart woocommerce-cart-form__contents" id="itemsList" cellspacing="0">
+                                        <table class="shop_table shop_table_responsive cart woocommerce-cart-form__contents" id="itemsList" cellspacing="0" style="max-height: 500px;overflow: hidden auto;display: block;">
                                             <thead>
                                                 <tr>
                                                     <th class="product-thumbnail">&nbsp;</th>
@@ -79,7 +79,7 @@
                         <div class="cart-collaterals">
                             <div class="cart_totals ">
                                 <h2>Cart totals</h2>
-                                <table cellspacing="0" class="shop_table shop_table_responsive">
+                                <table cellspacing="0" class="shop_table shop_table_responsive" >
                                     <tbody>
                                         <tr class="cart-subtotal">
                                             <th>Subtotal</th>
