--- a/app_cart/templates/package_cart.html
+++ b/app_cart/templates/package_cart.html
@@ -149,7 +149,7 @@
 {% endblock %}
 {% block scripts %}
 
-    <script src="https://www.paypal.com/sdk/js?client-id={% settings_value 'PAYPAL_CLIENT_ID_SANDBOX' %}"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id={% settings_value 'PAYPLA_CLIENT_ID' %}"></script>
 
 
     <script>
