--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -102,7 +102,7 @@
                     <div class="col-lg-6">
                         <div class="section-heading">
                             <span class="subheading">Top Trending Courses</span>
-                            <h3>Our Popular Online Courses</h3>
+                            <h3>BEST SELLING COURSES</h3>
                         </div>
                     </div>
 
