--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -132,22 +132,35 @@
 
             <!-- Main Menu Start -->
 
-            <div class="site-navigation main_menu " id="mainmenu-area">
+            <div class="site-navigation main_menu ">
                 <nav class="navbar navbar-expand-lg">
-                    <div class="container">
+                    <div class="container justify-content-center">
                         <a class="navbar-brand" href="/">
                             <img src="{% static 'edutim/images/logo5.png' %}" width="100" alt="Construction Safety Training" class="img-fluid">
+                        
+
                         </a>
+
+                     <h3> Construction Safety Training</h3>
 
                         <!-- Toggler -->
 
+                    </div>
+                    <!-- / .container -->
+                </nav>
+            </div>
+
+            <div class="site-navigation main_menu " id="mainmenu-area">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container justify-content-center">
+                   
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="fa fa-bars"></span>
                         </button>
 
                         <!-- Collapse -->
-                        <div class="collapse navbar-collapse" id="navbarMenu">
-                            <ul class="navbar-nav ml-auto">
+                        <div class="collapse navbar-collapse justify-content-center" id="navbarMenu">
+                            <ul class="navbar-nav">
                                 <li class="nav-item">
                                     <a class="nav-link" href="/">
                                         Home
@@ -181,7 +194,7 @@
 
                             </ul>
 
-                            <ul class="header-contact-right d-none d-lg-block">
+                            <ul class="header-contact-right">
                                 <li>
                                     <a href="{% url 'cart_detail' %}" class="header-cart">
                                         <i class="fa fa-shopping-cart"></i>
