--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -21,6 +21,18 @@
 
 {% block content %}
 
+<section class="page-header">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="page-header-content">
+                    <h1>BEST SELLING COURSES</h1>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
     <section class="section-padding course">
         <div class="course-top-wrap">
             <div class="container">
