--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -3,20 +3,20 @@
 {% load course_tags %}
 
 {% block title %}
-    {% if subject %}
-        Top
-        {{ subject.title }}
-        courses Online | pdhsafety.com
-    {% endif %}
+{% if subject %}
+Top
+{{ subject.title }}
+courses Online | pdhsafety.com
+{% endif %}
 {% endblock %}
 
 {% block meta_desc %}
-    {% if subject %}Learn
-        {{ subject.title }}
-        from top-rated instructors. Find the best online
-        {{ subject.title }}
-        classes and get certificate today. We provides bulk discounts. Learn Now!
-    {% endif %}
+{% if subject %}Learn
+{{ subject.title }}
+from top-rated instructors. Find the best online
+{{ subject.title }}
+classes and get certificate today. We provides bulk discounts. Learn Now!
+{% endif %}
 {% endblock %}
 
 {% block content %}
@@ -26,149 +26,168 @@
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <div class="page-header-content">
+                    {% if subject.page_title %}
+                    <h1>{{subject.page_title}}</h1>
+                    {%else%}
                     <h1>BEST SELLING COURSES</h1>
-                    
+                    {% endif %}
+
                 </div>
             </div>
         </div>
     </div>
 </section>
-    <section class="section-padding course">
-        <div class="course-top-wrap">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-8">
-                        <p>Showing
-                            {{ courses.count }}
-                            results</p>
+<section class="section-padding course">
+    <div class="course-top-wrap">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-8">
+                    <p>Showing
+                        {{ courses.count }}
+                        results</p>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="topbar-search">
+                        <form method="get" action="#">
+                            <select class="form-control" id="ddlCategory">
+                                <option value="{% url 'courses_list' %}">Choose Category</option>
+                                {% for s in subjects %}
+                                <option {% if subject == s %} selected {% endif %}
+                                    value="{% url 'course_list_subject' s.slug %}">
+                                    {{ s.title }}
+                                    ({{ s.total_courses }})
+                                </option>
+                                {% endfor %}
+                            </select>
+                        </form>
+                    </div>
+                </div>
+            </div>
+          
+        </div>
+    </div>
+
+
+    <div class="container">
+        <div class="row">
+
+            {% for course in courses %}
+            {% with subject=course.subject %}
+            <div class="col-lg-4 col-md-6 course-item">
+
+                <input type="hidden" name="id" value="{{ course.id }}" />
+                <input type="hidden" name="title" value="{{ course.title }}" />
+                <input type="hidden" name="subject" value="{{ subject }}" />
+                <input type="hidden" name="price" value="{{ course.price }}" />
+                <input type="hidden" name="discounted_price" value="{{ course.discounted_price }}" />
+                <input type="hidden" name="modules" value="{{ course.total_modules }}" />
+
+
+                <div class="course-block">
+                    <div class="course-img">
+                        <a href="{% url 'course_detail' course.slug %}">
+                            {% if course.image %}
+                            <img src="{{ course.image }}" alt="image" class="img-fluid" />
+                            {% else %}
+                            <img src="{% static 'edutim/images/courses/course-' %}{% random_int 1 12 %}.jpg" alt="image"
+                                class="img-fluid" />
+                            {% endif %}
+                        </a>
+                        {% if course.features.first.skill_level %}
+                        <span class="course-label">{{ course.features.first.skill_level }}</span>
+                        {% endif %}
+
                     </div>
 
-                    <div class="col-lg-4">
-                        <div class="topbar-search">
-                            <form method="get" action="#">
-                                <select class="form-control" id="ddlCategory">
-                                    <option value="{% url 'courses_list' %}">Choose Category</option>
-                                    {% for s in subjects %}
-                                        <option {% if subject == s %} selected {% endif %} value="{% url 'course_list_subject' s.slug %}">
-                                            {{ s.title }}
-                                            ({{ s.total_courses }})
-                                        </option>
-                                    {% endfor %}
-                                </select>
-                            </form>
+                    <div class="course-content">
+                        <div class="course-price ">
+                            {% if course.is_free %}
+                            Free Course
+                            {% elif course.discounted_price > 0 %}
+                            ${{ course.discounted_price }}
+                            <span class="del">${{ course.price }}</span>
+                            {% else %}
+                            ${{ course.price }}
+                            {% endif %}
                         </div>
+
+                        <h4>
+                            <a href="{% url 'course_detail' course.slug %}">
+                                {{ course.title }}
+                            </a>
+                        </h4>
+                        <div class="rating">
+                            <a href="#">
+                                <i class="fa fa-star"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fa fa-star"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fa fa-star"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fa fa-star"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fa fa-star"></i>
+                            </a>
+                            <span>(5.00)</span>
+                        </div>
+                        <p>{{ subject }}</p>
+
+                        <div class="course-footer d-lg-flex align-items-center justify-content-between">
+                            <div class="course-meta">
+                                {% if course.features.first.duration %}
+                                <span class="course-student">
+                                    <i class="bi bi-group"></i>
+                                    {{ course.features.first.duration }}</span>
+                                {% endif %}
+                                <span class="course-duration">
+                                    <i class="bi bi-badge3"></i>
+                                    {{ course.total_modules }}
+                                    Modules</span>
+                            </div>
+
+                            <div class="buy-btn">
+                                <a href="{% url 'course_detail' course.slug %}"
+                                    class="btn btn-main-2 btn-small">Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+            {% endwith %}
+            {% endfor %}
+        </div>
+        {% if subject.page_details %}
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <p>{{subject.page_details}}</p>
                     </div>
                 </div>
             </div>
         </div>
+        {% endif %}
+    </div>
 
-
-        <div class="container">
-            <div class="row">
-
-                {% for course in courses %}
-                    {% with subject=course.subject %}
-                    <div class="col-lg-4 col-md-6 course-item">
-                        
-                        <input type="hidden" name="id" value="{{ course.id }}"/>
-                        <input type="hidden" name="title" value="{{ course.title }}"/>
-                        <input type="hidden" name="subject" value="{{ subject }}"/>
-                        <input type="hidden" name="price" value="{{ course.price }}"/>
-                        <input type="hidden" name="discounted_price" value="{{ course.discounted_price }}"/>
-                        <input type="hidden" name="modules" value="{{ course.total_modules }}"/>
-
-
-                        <div class="course-block">
-                            <div class="course-img">
-                                <a href="{% url 'course_detail' course.slug %}">
-                                    {% if course.image %}
-                                        <img src="{{ course.image }}" alt="image" class="img-fluid"/>
-                                    {% else %}
-                                        <img src="{% static 'edutim/images/courses/course-' %}{% random_int 1 12 %}.jpg" alt="image" class="img-fluid"/>
-                                    {% endif %}
-                                </a>
-                                {% if course.features.first.skill_level %}
-                                    <span class="course-label">{{ course.features.first.skill_level }}</span>
-                                {% endif %}
-
-                            </div>
-
-                            <div class="course-content">
-                                <div class="course-price ">
-                                    {% if course.is_free %}
-                                        Free Course
-                                    {% elif course.discounted_price > 0 %}
-                                        ${{ course.discounted_price }}
-                                        <span class="del">${{ course.price }}</span>
-                                    {% else %}
-                                        ${{ course.price }}
-                                    {% endif %}
-                                </div>
-
-                                <h4>
-                                    <a href="{% url 'course_detail' course.slug %}">
-                                        {{ course.title }}
-                                    </a>
-                                </h4>
-                                <div class="rating">
-                                    <a href="#">
-                                        <i class="fa fa-star"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fa fa-star"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fa fa-star"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fa fa-star"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fa fa-star"></i>
-                                    </a>
-                                    <span>(5.00)</span>
-                                </div>
-                                <p>{{ subject }}</p>
-
-                                <div class="course-footer d-lg-flex align-items-center justify-content-between">
-                                    <div class="course-meta">
-                                        {% if course.features.first.duration %}
-                                            <span class="course-student">
-                                                <i class="bi bi-group"></i>
-                                                {{ course.features.first.duration }}</span>
-                                        {% endif %}
-                                        <span class="course-duration">
-                                            <i class="bi bi-badge3"></i>
-                                            {{ course.total_modules }}
-                                            Modules</span>
-                                    </div>
-
-                                    <div class="buy-btn">
-                                        <a href="{% url 'course_detail' course.slug %}" class="btn btn-main-2 btn-small">Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-
-                    </div>
-                    {% endwith %}
-                {% endfor %}
-            </div>
-        </div>
-
-    </section>
+</section>
 
 
 {% endblock %}
 
 {% block scripts %}
-    <script>
-        $(document).ready(function () {
-            $("#ddlCategory").change(function () {
-                var val = $(this).val();
-                window.location.href = val;
-            });
+<script>
+    $(document).ready(function () {
+        $("#ddlCategory").change(function () {
+            var val = $(this).val();
+            window.location.href = val;
         });
-    </script>
+    });
+</script>
 {% endblock %}
