--- a/app_admin/templates/admin_base.html
+++ b/app_admin/templates/admin_base.html
@@ -41,6 +41,17 @@
       <hr class="sidebar-divider my-0">
 
       <!-- Nav Item - Dashboard -->
+
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'course_list' %}">
+          <i class="fas fa-fw fa-home"></i>
+          <span>Home</span></a>
+      </li>
+
+      
+      <!-- Divider -->
+      <hr class="sidebar-divider my-0">
+
       <li class="nav-item">
         <a class="nav-link" href="{% url 'admin_dashboard' %}">
           <i class="fas fa-fw fa-tachometer-alt"></i>
