--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -41,6 +41,20 @@ classes and get certificate today. We provides bulk discounts. Learn Now!
     <div class="course-top-wrap">
         <div class="container">
 
+            {% if subject and subject.package_set.count > 0 %}
+            
+<div class="row">
+    <div class="col">
+
+        <div class="sp-badge-panel">
+            <a href="#bundles" class="sp-badge ">
+                <span>Buy All Courses at low price</span>
+            </a>
+        </div>
+    
+    </div>
+</div>
+{% endif %}
             {% if subject.page_details %}
             <div class="row mb-5">
                 <div class="col">
@@ -182,7 +196,7 @@ classes and get certificate today. We provides bulk discounts. Learn Now!
 {% if subject and subject.package_set.count > 0 %}
 <section class="team section-padding bg-grey mb-5">
     <div class="container">
-        <div class="row align-items-center">
+        <div class="row align-items-center" id="bundles">
             <div class="col-lg-12">
                 <div class="section-heading">
                     <h3>Buy Packages/Bundles for these courses</h3>
@@ -191,7 +205,7 @@ classes and get certificate today. We provides bulk discounts. Learn Now!
         </div>
 
 
-        <div class="row">
+        <div class="row" >
             {% for item in subject.package_set.all %}
             <div class="col-md-6">
                 <div class="card border-0 mb-4 shadow">
@@ -232,6 +246,67 @@ classes and get certificate today. We provides bulk discounts. Learn Now!
 {% endblock %}
 
 {% block scripts %}
+
+<style>
+
+
+
+.sp-badge {
+
+    position: relative;
+    letter-spacing: 0.08em;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    transition: transform 0.3s ease;
+    text-align: center;
+    filter: drop-shadow(0.25em 0.7em 0.95em rgba(0, 0, 0, 0.8));
+    font-size: calc(11px + 14 * (( 100vw - 420px ) / (860)));
+    margin-bottom: 17px;
+}
+@media screen and (max-width: 420px) {
+  .sp-badge  {
+    font-size: 11px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .sp-badge  {
+    font-size: 25px;
+  }
+}
+
+.sp-badge :hover {
+  color: #fff;
+  text-decoration: none;
+ 
+}
+.sp-badge :hover::before {
+  opacity: 0.9;
+}
+.sp-badge svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: block;
+  z-index: 0;
+  width: 10em;
+  height: 10em;
+}
+.sp-badge  span {
+  display: block;
+  background: #111;
+  border-radius: 0.4em;
+  padding: 0.4em 1em;
+  z-index: 1;
+  min-width: 11em;
+  border: 1px solid;
+  text-transform: uppercase;
+}
+</style>
+
 <script>
     $(document).ready(function () {
         $("#ddlCategory").change(function () {
