--- a/app_admin/templates/subjects/index.html
+++ b/app_admin/templates/subjects/index.html
@@ -108,6 +108,16 @@
                 </div>
 
                 <div class="row">
+                    <div class="col">
+                        <div class="form-group mb-4">
+                            <label for="">Video Link*</label>
+                            <input type="text" class="form-control form-control-sm" name="video_link" autocomplete="on"
+                                value="{{video_link}}">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
                     <div class="col-12">
                         <div class="form-group mb-4">
                             <label for="">Meta Title</label>
