--- a/app_public/templates/about/about.html
+++ b/app_public/templates/about/about.html
@@ -37,7 +37,7 @@
                                 Mission Statement
                             </h3>
                             <p>
-                                Construction Safety Training School aims to offer quality training that is relevant and useful for the construction industry and other labor industries. These efforts include offering training courses that are useful and/or necessary to achieve success
+                               NYC Construction Safety Training School aims to offer quality training that is relevant and useful for the construction industry and other labor industries. These efforts include offering training courses that are useful and/or necessary to achieve success
                                                             and career outcomes in the construction workforce and other industries where course material may be useful and applicable, annual reviews of training materials for accuracy and relevance, and development of quality staff and
                                                             instructors.
                             </p>
