--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -373,7 +373,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="copyright text-lg-center">
-                                <p>Copyright © 2021 All rights reserved | Construction Safety Training, LLC</p>
+                                <p>Copyright © 2021 All rights reserved | NYC Construction Safety Training, LLC</p>
                             </div>
                         </div>
                     </div>
