--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -8,7 +8,8 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta name="description" content="{% block meta_desc %}100% Online on any device at anytime courses with live access to board certified (BCSP) osha-authorized trainers for Engineers, Architects and Managers  {% endblock %}">
+        <meta name="description" content="{% block meta_desc %} 100% Online Low Cost Live Access to Safety Professionals (BCSP) OSHA Authorized Trainers 
+  {% endblock %}">
         <meta name="author" content="{% block meta_author %}{% endblock %}">
         <meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
         <meta name="robots" content="all">
