--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -6,16 +6,17 @@
 {% if subject %}
 Top
 {{ subject.title }}
-courses Online | pdhsafety.com
+Courses Online | pdhsafety.com
 {% endif %}
 {% endblock %}
 
 {% block meta_desc %}
-{% if subject %}Learn
+{% if subject %}Low Cost Online 
 {{ subject.title }}
-from top-rated instructors. Find the best online
-{{ subject.title }}
-classes and get certificate today. We provides bulk discounts. Learn Now!
+IACET Accredited, Access 24/7 On All Devices.
+Easy ToTake CSP Exam Prep Course Money Back Guarantee 
+
+
 {% endif %}
 {% endblock %}
 
