--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -8,11 +8,11 @@
     Course | pdhsafety.com
 {% endblock %}
 
-{% block meta_desc %}Learn
+{% block meta_desc %} Low Cost Online 
     {{ object.subject }}
-    from board certified (BCSP) OSHA authorized outreach training instructors. Find the best online
-    {{ object.subject }}
-    classes and get certified training today. We provides group discounts. Learn Now!
+   IACET Accredited, Access 24/7 On All Devices.
+Easy ToTake Money Back Guarante
+   
 {% endblock %}
 
 {% block meta_keywords %}
